Update image URLs in index.html

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
     />
     <meta
       property="og:image"
-      content="https://d160aj0mj3npgx.cloudfront.net/5DE886B9E8C/collections/tnsgm89xu3/items/541576a73346acd45fc7e2i143218325/covers/page_1/small"
+      content="https://d160aj0mj3npgx.cloudfront.net/5DE886B9E8C/collections/tiqvqs5unf/items/7928572bd80aba21943412i143709409/covers/page_1/small"
     />
     <meta
       property="og:image:secure_url"
-      content="https://d160aj0mj3npgx.cloudfront.net/5DE886B9E8C/collections/tnsgm89xu3/items/541576a73346acd45fc7e2i143218325/covers/page_1/small"
+      content="https://d160aj0mj3npgx.cloudfront.net/5DE886B9E8C/collections/tiqvqs5unf/items/7928572bd80aba21943412i143709409/covers/page_1/small"
     />
     <link
       rel="apple-touch-icon"
@@ -175,7 +175,7 @@
       <div class="row d-none d-sm-block">
         <div class="ratio ratio-16x9">
           <iframe
-            src="https://player.flipsnack.com/?hash=NURFODg2QjlFOEMrdG5zZ204OXh1Mw%3D%3D&forceWidget=1&t=1713474684"
+            src="https://player.flipsnack.com/?hash=NURFODg2QjlFOEMrdGlxdnFzNXVuZg%3D%3D&forceWidget=1&t=1716571043"
             width="100%"
             height="100%"
             seamless="seamless"
@@ -189,7 +189,7 @@
       <div class="row d-block d-sm-none">
         <div class="ratio ratio-1x1">
           <iframe
-            src="https://player.flipsnack.com/?hash=NURFODg2QjlFOEMrdG5zZ204OXh1Mw%3D%3D&forceWidget=1&t=1713474684"
+            src="https://player.flipsnack.com/?hash=NURFODg2QjlFOEMrdGlxdnFzNXVuZg%3D%3D&forceWidget=1&t=1716571043"
             width="100%"
             height="100%"
             seamless="seamless"
@@ -209,11 +209,28 @@
           data-aos-delay="0"
         >
           <a
-            href="https://player.flipsnack.com/?hash=NURFODg2QjlFOEMreGg5YXVwdGd2dQ%3D%3D&forceWidget=1&t=1712599271"
+            href="https://player.flipsnack.com/?hash=NURFODg2QjlFOEMrdG5zZ204OXh1Mw%3D%3D&forceWidget=1&t=1713474684"
             target="_blank"
           >
             <img
               src="https://d160aj0mj3npgx.cloudfront.net/5DE886B9E8C/collections/xh9auptgvu/items/0af6b286beaa26dfcc50b8i143099662/covers/page_1/small"
+              class="img-thumbnail"
+              alt="bubanc-202104"
+            />
+          </a>
+        </div>
+
+        <div
+          class="col-lg-2 col-md-3 col-sm-6 col-6"
+          data-aos="fade-up"
+          data-aos-delay="0"
+        >
+          <a
+            href="https://player.flipsnack.com/?hash=NURFODg2QjlFOEMreGg5YXVwdGd2dQ%3D%3D&forceWidget=1&t=1712599271"
+            target="_blank"
+          >
+            <img
+              src="https://d160aj0mj3npgx.cloudfront.net/5DE886B9E8C/collections/tnsgm89xu3/items/541576a73346acd45fc7e2i143218325/covers/page_1/small"
               class="img-thumbnail"
               alt="bubanc-202104"
             />
